# Projects

Pipe Game/: CMakeLists.txt
Pipe Game/include/: Board.h  CMakeLists.txt  Controller.h  File.h  Globals.h  Level.h  Pipe.h  Singleton.h  Sink.h
Pipe Game/resources/: CMakeLists.txt  board.txt
Pipe Game/src/: Board.cpp  CMakeLists.txt  Controller.cpp  File.cpp  Level.cpp  Pipe.cpp  Singleton.cpp  Sink.cpp  main.cpp
Portal Game/: CMakeLists.txt
Portal Game/include/: Acid.h  Animation.h  BadLaser.h  Board.h  Box.h  Bullet.h  Button.h  ButtonFloor.h  Const.h  Creator.h  DataBar.h  Elevator.h  Explenation.h  Fence.h  File.h  FixedObject.h  GameMaster.h  GameObject.h  Menu.h  MenuButton.h  Player.h  RayCastCallBack.h  Resources.h  TimePresent.h  Trampoline.h  UnFixedObject.h  Wall.h
Portal Game/resources/: CMakeLists.txt  difficult_level_1.txt  difficult_level_2.txt  difficult_level_3.txt  level_1.txt  level_2.txt  level_3.txt
Portal Game/src/: Acid.cpp  Animation.cpp  BadLaser.cpp  Board.cpp  Box.cpp  Bullet.cpp  Button.cpp  ButtonFloor.cpp  CMakeLists.txt  Creator.cpp  DataBar.cpp  Elevator.cpp  Explenation.cpp  Fence.cpp  File.cpp  FixedObject.cpp  GameMaster.cpp  GameObject.cpp  Menu.cpp  MenuButton.cpp  Player.cpp  RayCastCallBack.cpp  Resources.cpp  TimePresent.cpp  Trampoline.cpp  UnfixedObject.cpp  Wall.cpp  main.cpp
tr/: main.py
